# gcp-graphrag

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  sync_pipeline.py
.github/workflows/: update_pipeline.yml
data/: fetch_docs.py  mastery_graph.html
tests/: test_bayesian_engine.py  test_exams_taxonomy.py  test_markdown_parser.py
utils/: bayesian_engine.py  graph_ops.py  graph_pyvis.py  markdown_parser.py
