[project]
name = "gcp-graphrag"
version = "0.1.0"
description = "Automated GCP Exam GraphRAG Learning Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "neo4j-graphrag>=1.15.0",
    "neo4j>=5.20.0",
    "google-generativeai>=0.5.0",
    "pypdf>=4.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "pgmpy>=0.1.25",
    "numpy>=1.20.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "nicegui>=1.4.30",
    "pyvis>=0.3.2",
]
